# Generated by Django 5.0.6 on 2026-07-09 03:46

import simple_history.models
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='CustomerUser',
            fields=[
                ('id', models.BigAutoField(primary_key=True, serialize=False)),
                ('email', models.EmailField(max_length=254, unique=True)),
                ('password_hash', models.CharField(max_length=255)),
                ('is_email_verified', models.BooleanField(default=False)),
                ('mfa_enabled', models.BooleanField(default=False)),
                ('organization_name', models.CharField(blank=True, max_length=255, null=True)),
                ('prc_license_number', models.CharField(blank=True, help_text='Populated for customers enrolled in CPD-accredited trainings; feeds the Attendee Export (Section 3.6).', max_length=64, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'db_table': 'customer_user',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='ESignature',
            fields=[
                ('id', models.BigAutoField(primary_key=True, serialize=False)),
                ('signer_type', models.CharField(choices=[('staff', 'Staff'), ('customer', 'Customer')], default='staff', max_length=16)),
                ('meaning', models.CharField(choices=[('reviewed', 'Reviewed'), ('approved', 'Approved'), ('rejected', 'Rejected'), ('disposed', 'Disposed')], max_length=16)),
                ('signed_entity_type', models.CharField(help_text="e.g. 'Sample', 'TestResult', 'Investigation'", max_length=64)),
                ('signed_entity_id', models.BigIntegerField()),
                ('timestamp', models.DateTimeField(auto_now_add=True)),
                ('authentication_method', models.CharField(default='password_mfa', help_text='e.g. password_mfa, entra_conditional_access', max_length=32)),
            ],
            options={
                'db_table': 'e_signature',
                'ordering': ['-timestamp'],
            },
        ),
        migrations.CreateModel(
            name='HistoricalCustomerUser',
            fields=[
                ('id', models.BigIntegerField(blank=True, db_index=True)),
                ('email', models.EmailField(db_index=True, max_length=254)),
                ('password_hash', models.CharField(max_length=255)),
                ('is_email_verified', models.BooleanField(default=False)),
                ('mfa_enabled', models.BooleanField(default=False)),
                ('organization_name', models.CharField(blank=True, max_length=255, null=True)),
                ('prc_license_number', models.CharField(blank=True, help_text='Populated for customers enrolled in CPD-accredited trainings; feeds the Attendee Export (Section 3.6).', max_length=64, null=True)),
                ('created_at', models.DateTimeField(blank=True, editable=False)),
                ('updated_at', models.DateTimeField(blank=True, editable=False)),
                ('history_id', models.AutoField(primary_key=True, serialize=False)),
                ('history_date', models.DateTimeField(db_index=True)),
                ('history_change_reason', models.CharField(max_length=100, null=True)),
                ('history_type', models.CharField(choices=[('+', 'Created'), ('~', 'Changed'), ('-', 'Deleted')], max_length=1)),
            ],
            options={
                'verbose_name': 'historical customer user',
                'verbose_name_plural': 'historical customer users',
                'ordering': ('-history_date', '-history_id'),
                'get_latest_by': ('history_date', 'history_id'),
            },
            bases=(simple_history.models.HistoricalChanges, models.Model),
        ),
        migrations.CreateModel(
            name='HistoricalStaffUser',
            fields=[
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('id', models.BigIntegerField(blank=True, db_index=True)),
                ('entra_oid', models.CharField(db_index=True, max_length=64)),
                ('display_name', models.CharField(max_length=255)),
                ('email', models.EmailField(db_index=True, max_length=254)),
                ('is_active', models.BooleanField(default=True)),
                ('is_staff', models.BooleanField(default=True)),
                ('prc_license_number', models.CharField(blank=True, help_text='Required only for staff who act as Reviewer/Approver on regulated (DOH/DENR) reports.', max_length=64, null=True)),
                ('prc_license_validity_date', models.DateField(blank=True, null=True)),
                ('created_at', models.DateTimeField(blank=True, editable=False)),
                ('updated_at', models.DateTimeField(blank=True, editable=False)),
                ('history_id', models.AutoField(primary_key=True, serialize=False)),
                ('history_date', models.DateTimeField(db_index=True)),
                ('history_change_reason', models.CharField(max_length=100, null=True)),
                ('history_type', models.CharField(choices=[('+', 'Created'), ('~', 'Changed'), ('-', 'Deleted')], max_length=1)),
            ],
            options={
                'verbose_name': 'historical staff user',
                'verbose_name_plural': 'historical staff users',
                'ordering': ('-history_date', '-history_id'),
                'get_latest_by': ('history_date', 'history_id'),
            },
            bases=(simple_history.models.HistoricalChanges, models.Model),
        ),
        migrations.CreateModel(
            name='Role',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(choices=[('customer', 'Customer'), ('sample_receiver', 'Sample Receiver'), ('analyst', 'Analyst'), ('reviewer', 'Reviewer'), ('approver', 'Approver'), ('qa_officer', 'QA Officer'), ('lab_supervisor', 'Lab Supervisor'), ('instrument_custodian', 'Instrument Custodian'), ('training_coordinator', 'Training Coordinator'), ('system_administrator', 'System Administrator')], max_length=32, unique=True)),
                ('permission_set', models.JSONField(blank=True, default=dict)),
            ],
            options={
                'db_table': 'role',
                'ordering': ['name'],
            },
        ),
        migrations.CreateModel(
            name='StaffUser',
            fields=[
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('id', models.BigAutoField(primary_key=True, serialize=False)),
                ('entra_oid', models.CharField(db_index=True, max_length=64, unique=True)),
                ('display_name', models.CharField(max_length=255)),
                ('email', models.EmailField(max_length=254, unique=True)),
                ('is_active', models.BooleanField(default=True)),
                ('is_staff', models.BooleanField(default=True)),
                ('prc_license_number', models.CharField(blank=True, help_text='Required only for staff who act as Reviewer/Approver on regulated (DOH/DENR) reports.', max_length=64, null=True)),
                ('prc_license_validity_date', models.DateField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
            ],
            options={
                'db_table': 'staff_user',
                'ordering': ['display_name'],
            },
        ),
    ]
