# Generated by Django 5.0.6 on 2026-07-09 03:46

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('accounts', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='RetentionPolicy',
            fields=[
                ('id', models.BigAutoField(primary_key=True, serialize=False)),
                ('record_type', models.CharField(choices=[('raw_instrument_file', 'Raw Instrument File'), ('coa_report', 'COA / Report'), ('calibration_record', 'Calibration Record'), ('training_record', 'Training Record'), ('audit_log_entry', 'Audit Log Entry')], max_length=32, unique=True)),
                ('retention_days', models.PositiveIntegerField(default=1825, help_text='5-year default per ISO/IEC 17025:2017 8.4.2.')),
                ('action_after_expiry', models.CharField(choices=[('archive_to_cold_storage', 'Archive to Cold Storage'), ('lock_record', 'Lock Record'), ('anonymize', 'Anonymize')], default='archive_to_cold_storage', max_length=32)),
                ('is_active', models.BooleanField(default=True)),
            ],
            options={
                'db_table': 'retention_policy',
                'ordering': ['record_type'],
            },
        ),
        migrations.CreateModel(
            name='AuditLogEntry',
            fields=[
                ('id', models.BigAutoField(primary_key=True, serialize=False)),
                ('actor_id', models.BigIntegerField(blank=True, null=True)),
                ('actor_type', models.CharField(choices=[('staff', 'Staff'), ('customer', 'Customer'), ('system', 'System')], max_length=16)),
                ('entity_type', models.CharField(max_length=64)),
                ('entity_id', models.BigIntegerField()),
                ('field_changed', models.CharField(blank=True, max_length=128)),
                ('old_value', models.TextField(blank=True, null=True)),
                ('new_value', models.TextField(blank=True, null=True)),
                ('reason', models.TextField(blank=True)),
                ('timestamp', models.DateTimeField(auto_now_add=True)),
                ('e_signature', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='audit_log_entries', to='accounts.esignature')),
            ],
            options={
                'db_table': 'audit_log_entry',
                'ordering': ['-timestamp'],
                'indexes': [models.Index(fields=['entity_type', 'entity_id'], name='audit_log_e_entity__0e2768_idx'), models.Index(fields=['timestamp'], name='audit_log_e_timesta_905be0_idx')],
            },
        ),
    ]
